# test-automation-system

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml
ci/: Jenkinsfile  jenkins_config.yml
config/: base.yml  logging.yml
config/environments/: dev.yml  prod.yml  staging.yml
engines/: base_engine.py
engines/api/: rest_engine.py  soap_engine.py
engines/mobile/: appium_engine.py
engines/performance/: locust_engine.py
engines/regression/: regression_manager.py
engines/ui/: playwright_engine.py
engines/ui/pages/: base_page.py
input_parser/: __init__.py  base_parser.py  document_parser.py  story_parser.py  task_parser.py
integrations/bug_tracker/: base_tracker.py  factory.py
integrations/github/: github_client.py
models/: __init__.py  bug_report.py  test_case.py  test_result.py
orchestrator/: __init__.py  cli.py  pipeline.py  runner.py  setup_wizard.py  ui_server.py
orchestrator/templates/: ui.html
reporters/: __init__.py  base_reporter.py  html_reporter.py  pdf_reporter.py
reporters/templates/: report.html.j2
test_generator/: __init__.py  generator.py  template_engine.py
test_generator/templates/: api_test.j2  feature.j2  ui_test.j2
utils/: __init__.py  helpers.py  logger.py  retry.py
