[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-automation-system"
version = "1.0.0"
description = "AI-powered, template-driven test automation platform"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "requests>=2.31",
    "zeep>=4.2",
    "pytest>=8.0",
    "pytest-html>=4.1",
    "pytest-xdist>=3.5",
    "allure-pytest>=2.13",
    "pytest-retry>=0.6",
    "playwright>=1.41",
    "Appium-Python-Client>=3.1",
    "locust>=2.20",
    "weasyprint>=60.0",
    "jira>=3.6",
    "PyGithub>=2.1",
    "rich>=13.7",
    "structlog>=24.1",
    "tenacity>=8.2",
    "python-docx>=1.1",
    "PyPDF2>=3.0",
    "openpyxl>=3.1",
]

[project.scripts]
tas = "orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "outputs*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["B008", "N818"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v --tb=short"
markers = [
    "api: API tests",
    "ui: UI tests",
    "mobile: Mobile tests",
    "performance: Performance tests",
    "regression: Regression tests",
    "smoke: Smoke tests",
    "unit: Unit tests for the framework itself",
]
